RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/03_0001/03_merged.txt
/home/dimpling/AutoSpec/out/03_0001/03_merged.c:28:5: error: unterminated comment
   28 |     /*@;
      |     ^
